# Grasp_Point_Detection

./: CMakeLists.txt
include/: binsegmentation.h  entropy.h  pointpose.h
src/: binsegmentation.cpp  entropy.cpp  entropy_only.cpp  main.cpp  only_bin.cpp  pico.cpp  pointpose.cpp
